--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp-w3cjs": ">=0.2.1",
     "gulp-csslint": ">=0.1.5",
     "gulp-jshint": ">=1.9.0",
-    "jshint-stylish": "1.0.0"
+    "jshint-stylish": "1.0.0",
+    "psi": "^0.1.2"
   }
 
 }
